# Flock2

./: CMakeLists.txt  LICENSE  README.md  app_flock.cpp  build.sh  build_all.bat  build_f2.bat  flock_kernels.cu  flock_types.h  log.txt  output.csv
assets/: scene_collide.txt  scene_waves.txt
source/: app_flock.cpp  build_clean.bat  flock_kernels.cu  flock_kernels.cuh  flock_types.h
